Updated configs